six (1.7.2-1~bpo70+1) wheezy-backports; urgency=medium

  * Rebuild for wheezy-backports.

 -- Colin Watson <cjwatson@debian.org>  Mon, 16 Jun 2014 17:58:40 +0100

six (1.7.2-1) unstable; urgency=medium

  * New upstream release.
  * Adjust python-six-whl's short description to say "wheel", not "wheels"
    (thanks, Scott Kitterman).

 -- Colin Watson <cjwatson@debian.org>  Tue, 10 Jun 2014 19:58:27 +0100

six (1.6.1-2) unstable; urgency=medium

  [ Colin Watson ]
  * Move git repository to collab-maint.

  [ Barry Warsaw ]
  * d/control:
    - Added python-setuptools, python3-setuptools, python3-wheel, and
      dh-python to Build-Depends.
    - Added python-six-whl binary package.
    - Added myself to Uploaders with maintainer's permission.
  * d/rules:
    - Use --buildsystem=pybuild and simplify.
    - Build the universal wheel.
  * d/python-six-whl.install: Added.
  * d/python{,3}-six.install: Unnecessary for pybuild; removed.

 -- Barry Warsaw <barry@debian.org>  Fri, 23 May 2014 10:46:07 -0400

six (1.6.1-1) unstable; urgency=medium

  * New upstream release.

 -- Colin Watson <cjwatson@debian.org>  Wed, 19 Mar 2014 16:22:09 +0000

six (1.5.2-1) unstable; urgency=medium

  * New upstream release.
  * Switch to git; adjust Vcs-* fields.
  * Policy version 3.9.5: no changes required.

 -- Colin Watson <cjwatson@debian.org>  Tue, 07 Jan 2014 01:00:45 +0000

six (1.4.1-1) unstable; urgency=low

  * New upstream release (closes: #721765).

 -- Colin Watson <cjwatson@debian.org>  Wed, 04 Sep 2013 06:44:27 +0100

six (1.3.0-1) unstable; urgency=low

  * New upstream release.

 -- Colin Watson <cjwatson@debian.org>  Sat, 27 Apr 2013 12:31:44 +0100

six (1.2.0-1) unstable; urgency=low

  * New upstream release.
  * Add a watch file.
  * Policy version 3.9.4: no changes required.
  * Run the upstream test suite.

 -- Colin Watson <cjwatson@debian.org>  Fri, 21 Sep 2012 22:53:29 +0100

six (1.1.0-2) unstable; urgency=low

  * Convert to source format 3.0 (quilt).