@@ -6,10 +6,3 @@ export PYBUILD_TEST_PYTEST=1
 
 %:
 	dh $@ --with python2,python3 --buildsystem=pybuild
-
-
-override_dh_auto_install:
-	dh_auto_install
-	python3 setup.py bdist_wheel \
-		--universal \
-		-d $(CURDIR)/debian/tmp/usr/share/python-wheels
